--- a/_posts/2025-07-16-praemien.markdown
+++ b/_posts/2025-07-16-praemien.markdown
@@ -1,16 +1,11 @@
 ---
 layout: blog
 categories: financial-advice
-permalink: /financial-advice/betreibungsregister/
+permalink: /financial-advice/praemien/
 date: 12/06/2022
 tags: 
-  - beitreibungsregister
-  - kreditwürdigkeit
-  - kreditprüfung
-
-show_faq: true
-show_similar: true
-show_newsletter: true
+  - prämien
+  - bonität
 
 title: Was ist das Schweizer Betreibungsregister?
 intro: Das Schweizer Betreibungsregister ist ein Verzeichnis, in dem Zahlungsverpflichtungen und Betreibungen von Unternehmen erfasst werden.
