--- a/_posts/2025-07-16-sparen.markdown
+++ b/_posts/2025-07-16-sparen.markdown
@@ -1,12 +1,18 @@
 ---
-layout: default
+layout: blog
+categories: financial-advice
+permalink: /financial-advice/sparen/
+date: 12/06/2022
+tags: 
+  - sparen
+  - kredit
+  - kreditprüfung
+  
 title: Sparen im täglichen Leben - Tipps & Tricks
 intro: Wie kann man bei den Lebensmitteln sparen? Sparen bei Lebensmitteln gelingt durch klugen Preisvergleich und die Nutzung von Angeboten. 
 image: /assets/images/tips-tricks.png
 color: purple-100
 duration: 5
-categories: financial-advice
-permalink: /financial-advice/sparen/
 ---
 # Sparen im täglichen Leben - Tipps & Tricks
 
